# fitness-research-ai-agent

./: .gitignore  README.md  pyproject.toml
fitness_research_agent/: main.py  manager.py  printer.py
fitness_research_agent/agents/: planner_agent.py  search_agent.py  verifier_agent.py  writer_agent.py
